--- a/index.html
+++ b/index.html
@@ -114,10 +114,6 @@
     .level-cover {
       display: none;
     }
-    /* Parallax Background Layers */
-    .galaxy-layer {
-      display: none;
-    }
   </style>
 </head>
 <body onload="brython()">
@@ -155,9 +151,6 @@
   <img id="level3-cover" src="level3_cover.jpg" class="level-cover"/>
   <!-- Placeholder for Boss Cover Art (Optional) -->
   <!-- <img id="boss-cover" src="boss_cover.jpg" class="level-cover"/> -->
-
-  <!-- PARALLAX BACKGROUND LAYER -->
-  <!-- Since we're drawing the galaxy procedurally, no need for an image layer -->
 
   <!-- HIGH SCORE MODAL -->
   <div id="high-score-modal">
@@ -663,134 +656,26 @@
             ctx.fillRect(star["x"], star["y"], star["size"], star["size"])
 
     def draw_galaxy():
-        ctx.fillStyle = "rgba(255, 255, 255, 0.5)"
         for particle in galaxy_particles:
+            ctx.fillStyle = f"rgba(255, 255, 255, 0.5)"
             ctx.beginPath()
             ctx.arc(particle["x"], particle["y"], particle["size"], 0, 2 * window.Math.PI)
             ctx.fill()
 
+    # -------------------------------------------------
+    # 10) GALAXY MOVEMENT
+    # -------------------------------------------------
     def move_galaxy():
         for particle in galaxy_particles:
             particle["y"] += particle["speed"]
             if particle["y"] > HEIGHT:
-                # Reset to top with slight randomness
+                # Reset to top with a new angle to maintain the spiral
                 particle["y"] = 0
-                particle["x"] = WIDTH / 2 + (particle["x"] - WIDTH / 2)  # Maintain spiral
-                # Optionally, randomize a bit more for variation
-
-    def draw():
-        global game_over, game_started, showing_level_title
-        global showing_high_score_prompt, showing_final_score, final_score_scheduled
-
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
-        move_stars()
-        move_galaxy()
-        draw_stars()
-        draw_galaxy()
-
-        # Slight background tint
-        if level > MAX_LEVELS:
-            ctx.fillStyle = "rgba(255, 0, 0, 0.1)"
-        else:
-            ctx.fillStyle = "rgba(0, 0, 255, 0.1)"
-        ctx.fillRect(0, 0, WIDTH, HEIGHT)
-
-        if not game_started:
-            draw_start_screen()
-        elif showing_level_title:
-            draw_level_title()
-        elif showing_final_score:
-            draw_final_score()
-        else:
-            # Draw player (car)
-            if not game_over:
-                pw, ph = get_scaled_dims(spaceship_img, PLAYER_MAX_DIM)
-                ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], pw, ph)
-
-            # Draw boss or normal enemies
-            if level > MAX_LEVELS:
-                bw, bh = get_scaled_dims(boss_img, BOSS_MAX_DIM)
-                ctx.drawImage(boss_img, boss_pos[0], boss_pos[1], bw, bh)
-            else:
-                for enemy in enemies:
-                    ew, eh = get_scaled_dims(enemy["img"], ENEMY_MAX_DIM)
-                    ctx.drawImage(enemy["img"], enemy["pos"][0], enemy["pos"][1], ew, eh)
-
-            # Bullets
-            ctx.fillStyle = "yellow"
-            ctx.shadowBlur = 15
-            ctx.shadowColor = "yellow"
-            for bullet in bullets:
-                ctx.fillRect(bullet[0], bullet[1], BULLET_WIDTH, BULLET_HEIGHT)
-
-            # Enemy bullets
-            ctx.fillStyle = "red"
-            ctx.shadowBlur = 15
-            ctx.shadowColor = "red"
-            for bullet in enemy_bullets:
-                ctx.fillRect(bullet[0], bullet[1], ENEMY_BULLET_WIDTH, ENEMY_BULLET_HEIGHT)
-
-            # Laser beams
-            ctx.fillStyle = "blue"
-            ctx.shadowBlur = 20
-            ctx.shadowColor = "blue"
-            for laser in laser_beams:
-                ctx.fillRect(laser["x"], laser["y"], LASER_WIDTH, HEIGHT - laser["y"])
-
-            # Diagonal shots
-            ctx.shadowBlur = 0
-            ctx.fillStyle = "purple"
-            for shot in diagonal_shots:
-                ctx.fillRect(shot["x"], shot["y"], BULLET_WIDTH, BULLET_HEIGHT)
-
-            # Score
-            ctx.fillStyle = "white"
-            ctx.font = "24px 'Press Start 2P'"
-            ctx.textAlign = "right"
-            ctx.fillText(f"Score: {score}", WIDTH - 20, 40)
-
-            # GAME OVER
-            if game_over and not final_score_scheduled:
-                final_score_scheduled = True
-                ctx.fillStyle = "red"
-                ctx.font = "48px 'Press Start 2P'"
-                ctx.textAlign = "center"
-                ctx.fillText("GAME OVER", WIDTH // 2, HEIGHT // 2)
-                window.setTimeout(show_final_score, 3000)
-
-            # If boss is beaten
-            if boss_hits >= BOSS_HITS_REQUIRED and not game_over:
-                game_over = True
-                if not final_score_scheduled:
-                    final_score_scheduled = True
-                    ctx.fillStyle = "green"
-                    ctx.font = "48px 'Press Start 2P'"
-                    ctx.textAlign = "center"
-                    ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
-                    window.setTimeout(show_final_score, 3000)
-
-            # Level up if no enemies remain
-            if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
-                level_up()
-
-    # -------------------------------------------------
-    # 10) HIGH SCORE: SUBMIT / FETCH / UPDATE
-    # -------------------------------------------------
-    def initialize_high_score():
-        global top_scores
-        timestamp = window.Date.new().getTime()
-        url = f'https://raw.githubusercontent.com/Jamie-Wilson-UL/No-Matter/main/high_score.json?nocache={timestamp}'
-        window.fetch(url).then(
-            lambda response: response.json()
-        ).then(
-            lambda data: update_high_scores(data)
-        ).catch(
-            lambda error: window.console.error(f"Error fetching high scores: {error}")
-        )
-
-    def update_high_scores(data):
-        global top_scores
-        top_scores = data
+                # Slightly adjust the angle to keep the spiral pattern
+                particle["angle"] += window.Math.PI / 180 * 5  # Rotate by 5 degrees
+                # Update x based on the new angle
+                radius = (WIDTH / 2) - 100  # Keep within bounds
+                particle["x"] = WIDTH / 2 + radius * window.Math.cos(particle["angle"])
 
     # -------------------------------------------------
     # 11) HANDLE KEYDOWN EVENT
@@ -894,7 +779,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -903,7 +788,7 @@
         for bullet in enemy_bullets[:]:
             # Check collision based on hitbox
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
@@ -1066,6 +951,17 @@
     window.setInterval(enemy_shoot, 500)
     window.setInterval(toggle_flash_text, 1000)
 
-  </script>
+    # -------------------------------------------------
+    # 18) FUNCTION DEFINITIONS
+    # -------------------------------------------------
+    # Define move_stars function to prevent NameError
+    def move_stars():
+        for star in stars:
+            star["y"] += 1
+            if star["y"] > HEIGHT:
+                star["y"] = 0
+                star["x"] = window.Math.random() * WIDTH
+
+    </script>
 </body>
 </html>
