--- a/index.html
+++ b/index.html
@@ -560,9 +560,9 @@
     def draw_start_screen():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
-        move_galaxy()
+        # move_galaxy()      # Swirly background removed
         draw_stars()
-        draw_galaxy()
+        # draw_galaxy()      # Swirly background removed
 
         # Adjusted title dimensions for better centering
         title_width, title_height = 620, 160  # Slightly increased size
@@ -598,9 +598,9 @@
 
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
-        move_galaxy()
+        # draw_galaxy()      # Swirly background removed
         draw_stars()
-        draw_galaxy()
+        # draw_galaxy()      # Swirly background removed
 
         ctx.fillStyle = "yellow"
         ctx.font = "bold 48px 'Press Start 2P'"
@@ -647,9 +647,9 @@
     def draw_final_score():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
-        move_galaxy()
+        # draw_galaxy()      # Swirly background removed
         draw_stars()
-        draw_galaxy()
+        # draw_galaxy()      # Swirly background removed
 
         ctx.fillStyle = "white"
         ctx.font = "48px 'Press Start 2P'"
@@ -801,7 +801,7 @@
                 for bullet in bullets[:]:
                     # Check collision based on hitbox
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
@@ -811,7 +811,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -820,7 +820,7 @@
         for bullet in enemy_bullets[:]:
             # Check collision based on hitbox
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
@@ -832,8 +832,8 @@
 
         for shot in diagonal_shots[:]:
             # Check collision with diagonal shots
-            if (player_pos[0] <= shot["x"] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= shot["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+            if (player_pos[0] <= shot[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
+                player_pos[1] <= shot[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
 
         # Enemy/player overlap (normal levels)
@@ -1001,4 +1001,3 @@
   </script>
 </body>
 </html>
-
