--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
   <!-- Brython Script -->
   <script type="text/python">
-    from browser import document, html, window, timer
+    from browser import document, html, window, timer, console
+    from browser import bind, ajax
 
     # ---------------------------------------------------------
     # 1) GAME CONSTANTS
@@ -276,7 +277,7 @@
             "y": window.Math.random() * HEIGHT,
             "size": window.Math.random() * 3 + 1
         }
-        for _ in range(100)
+        for _ in range(50)  # Reduced from 100 to 50 for performance
     ]
 
     # Galaxy Layer (Procedurally Generated)
@@ -401,12 +402,13 @@
         top_scores = data
 
     def submit_name(event):
-        global top_scores, score
+        global top_scores, score, high_score_updated
         player_name = player_name_input.value.strip()
         if player_name:
             top_scores.append({"name": player_name, "score": score})
             top_scores = sorted(top_scores, key=lambda x: x['score'], reverse=True)[:3]
             trigger_github_action(player_name, score)
+            high_score_updated = True
             hide_high_score_prompt()
             reset_game()
 
@@ -667,13 +669,12 @@
     def draw_static_background_level():
         """Draws the static background image for gameplay levels."""
         if static_bg_level.complete:
-            bw, bh = get_scaled_dims(static_bg_level, WIDTH)  # Scale to fit canvas width
             ctx.drawImage(
                 static_bg_level,
                 0,
                 0,
-                bw,
-                bh
+                WIDTH,
+                HEIGHT
             )
 
     def draw_level_title():
@@ -724,7 +725,7 @@
         window.console.log(f"Displaying Level {level} title screen.")
 
         # Schedule game initialization after 4 seconds
-        timer.set_timeout(initialize_game, 4000)  # Increased to 4 seconds
+        window.set_timeout(initialize_game, 4000)  # Changed to use window.set_timeout
 
     def draw_start_screen():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -775,10 +776,11 @@
         ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
 
         if high_score_updated:
+            ctx.fillStyle = "white"
             ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
             show_high_score_prompt()
         else:
-            timer.set_timeout(reset_game, 3000)
+            window.set_timeout(reset_game, 3000)  # Changed to use window.set_timeout
 
     def show_high_score_prompt():
         high_score_modal.style.display = "block"
@@ -901,6 +903,9 @@
         if game_over or not game_started or showing_level_title or showing_final_score:
             return
 
+        # Move stars
+        move_stars()
+
         # Move player bullets
         for bullet in bullets[:]:
             bullet[1] -= BULLET_SPEED
@@ -931,7 +936,7 @@
                 for bullet in bullets[:]:
                     # Check collision based on hitbox
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
@@ -941,7 +946,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -950,7 +955,7 @@
         for bullet in enemy_bullets[:]:
             # Check collision based on hitbox
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
@@ -1100,7 +1105,7 @@
 
         def reveal_press_space():
             press_space_loading.style.display = "block"  # Show text after loading bar
-        timer.set_timeout(reveal_press_space, 1500)  # Match with CSS animation duration (1.5s)
+        window.set_timeout(reveal_press_space, 1500)  # Changed to use window.set_timeout
 
     # -------------------------------------------------
     # 17) INITIALIZATION
@@ -1117,14 +1122,13 @@
     show_loading_screen()
 
     # Set intervals for game updates and other periodic tasks
-    timer.set_interval(update, 30)
-    timer.set_interval(enemy_shoot, 500)
-    timer.set_interval(toggle_flash_text, 1000)
+    window.set_interval(update, 30)        # 30ms interval for update loop
+    window.set_interval(enemy_shoot, 500)  # 500ms interval for enemy shooting
+    window.set_interval(toggle_flash_text, 1000)  # 1000ms interval for flashing text
 
     # -------------------------------------------------
     # 18) FUNCTION DEFINITIONS
     # -------------------------------------------------
-    # Define move_stars function to prevent NameError
     def move_stars():
         for star in stars:
             star["y"] += 1
@@ -1137,3 +1141,4 @@
   </script>
 </body>
 </html>
+
