--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
   <!-- Brython Script -->
   <script type="text/python">
-    from browser import document, html, window, timer, console
-    from browser import bind, ajax
+    from browser import document, html, window, console
+    from browser import bind
 
     # ---------------------------------------------------------
     # 1) GAME CONSTANTS
@@ -1141,4 +1141,3 @@
   </script>
 </body>
 </html>
-
