--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         window.console.log(f"Displaying Level {level} title screen.")
 
         # Schedule game initialization after 4 seconds
-        window.set_timeout(initialize_game, 4000)  # Changed to use window.set_timeout
+        window.setTimeout(initialize_game, 4000)  # Use setTimeout with correct case
 
     def draw_start_screen():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -780,7 +780,7 @@
             ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
             show_high_score_prompt()
         else:
-            window.set_timeout(reset_game, 3000)  # Changed to use window.set_timeout
+            window.setTimeout(reset_game, 3000)  # Use setTimeout with correct case
 
     def show_high_score_prompt():
         high_score_modal.style.display = "block"
@@ -1105,7 +1105,7 @@
 
         def reveal_press_space():
             press_space_loading.style.display = "block"  # Show text after loading bar
-        window.set_timeout(reveal_press_space, 1500)  # Changed to use window.set_timeout
+        window.setTimeout(reveal_press_space, 1500)  # Use setTimeout with correct case
 
     # -------------------------------------------------
     # 17) INITIALIZATION
@@ -1122,9 +1122,9 @@
     show_loading_screen()
 
     # Set intervals for game updates and other periodic tasks
-    window.set_interval(update, 30)        # 30ms interval for update loop
-    window.set_interval(enemy_shoot, 500)  # 500ms interval for enemy shooting
-    window.set_interval(toggle_flash_text, 1000)  # 1000ms interval for flashing text
+    window.setInterval(update, 30)        # 30ms interval for update loop
+    window.setInterval(enemy_shoot, 500)  # 500ms interval for enemy shooting
+    window.setInterval(toggle_flash_text, 1000)  # 1000ms interval for flashing text
 
     # -------------------------------------------------
     # 18) FUNCTION DEFINITIONS
