--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                 for bullet in bullets[:]:
                     # Check collision based on hitbox
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
@@ -946,7 +946,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -955,7 +955,7 @@
         for bullet in enemy_bullets[:]:
             # Check collision based on hitbox
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
